# bird-lang

./: CMakeLists.txt  README.md  ast_printer.h  binary.h  bird_exception.h  code.bird  code_gen.h  compiler  decl_stmt.h  expr.h  expr_stmt.h  hello_test.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  makefile  node.h  output.ll  parser.cpp  parser.h  primary.h  print_stmt.h  stmt.h  sym_table.h  unary.h  visitor.h
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
include/: bird_type.h  callable.h  lexer.h  parser.h  parser2.hpp  stack.h  sym_table.h  token.h  type.h  value.h
include/ast_node/: index.h  node.h
include/ast_node/expr/: assign_expr.h  binary.h  call.h  expr.h  index.h  primary.h  ternary.h  unary.h
include/ast_node/func/: func.h
include/ast_node/stmt/: assign_stmt.h  block.h  break_stmt.h  const_stmt.h  continue_stmt.h  decl_stmt.h  expr_stmt.h  for_stmt.h  func.h  if_stmt.h  index.h  print_stmt.h  return_stmt.h  stmt.h  type_stmt.h  while_stmt.h
include/exceptions/: bird_exception.h  break_exception.h  continue_Exception.h  continue_exception.h  return_exception.h  runtime_exception.h  user_error_tracker.h  user_exception.h
include/visitors/: ast_printer.h  code_gen.h  interpreter.h  semantic_analyzer.h  type_checker.h  visitor.h
src/: callable.cpp  lexer.cpp  lexer.l  lexer2.cpp  parser.cpp  parser.y  parser.yy  parser2.cpp  scanner.hpp  token.cpp
tests/: lexer_tests.cpp  parser_tests.cpp
tests/const_test_suite/: const_redeclaration_test.cpp  const_with_type_test.cpp  const_without_type_test.cpp  immutability_test.cpp
tests/expr_test_suite/: expr_test.cpp
tests/for_loop_test_suite/: for_loop_test.cpp  scoped_for_loop_test.cpp
tests/function_test_suite/: function_calls.cpp  function_calls_test.cpp  function_return.cpp  function_return_test.cpp
tests/helpers/: compile_helper.hpp  lex_test_helper.hpp  parse_test_helper.hpp  run_wasm.js
tests/if_test_suite/: if_else_if_else_test.cpp  if_else_test.cpp  if_test.cpp
tests/interpreter_test_suite/: function_test.cpp
tests/lexer_test_suite/: lexer_test.cpp
tests/parser_test_suite/: parser_test.cpp
tests/print_test_suite/: print_test.cpp
tests/symbol_table_test_suite/: const_redeclaration_scope_test.cpp  const_scope_test.cpp  var_redeclaration_scope_test.cpp  vars_scope_test.cpp
tests/ternary_test_suite/: assignment_with_ternary_test.cpp  nested_ternary_test.cpp  ternary_test.cpp
tests/type_stmt_test_suite/: type_stmt_test.cpp
tests/vars_test_suite/: foobar_test.cpp  mutability_test.cpp  mutability_type_test.cpp  var_redeclaration_test.cpp  vars_with_type_test.cpp  vars_without_type_test.cpp
tests/while_test_suite/: while_test.cpp
